--- a/index.html
+++ b/index.html
@@ -6,16 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="jquery.js"></script>
     <title>Jquery Basic</title>
+    <style>
+        #boxes_wrap{ width:100px; height: 100px; background-color: gray; }
+    </style>
 </head>
 <body>
     <h1>Belajar Jquery!</h1>
 
     <div id="box1"> Box 1 </div>
-
-    <div class="boxes">Baris pertama</div>
-    <div class="boxes">Baris kedua</div>
-    <div class="boxes">Baris kedua koma lima</div>
-    <div class="boxes">Baris ketiga</div>
+    <div id="boxes_wrap">
+        <div class="boxes">Baris pertama</div>
+        <div class="boxes">Baris kedua</div>
+        <div class="boxes">Baris kedua koma lima</div>
+        <div class="boxes">Baris ketiga</div>
+    </div>
 
     <form>
         <input type="text" id="inputText">
@@ -60,6 +64,25 @@
                // agar button tidak mereload
                event.preventDefault();
             });
+
+            // ======== Menambahkan dan Menghapus Elemen ========
+
+            // ==== Menambah Element ====
+            //append prepend | after before
+            // append = di dalam div & paling akhir 
+            // prepend = di dalam div & paling awal 
+            // after = diluar div & setelah div 
+            // before = diluar div & sebelum div 
+            $('#boxes_wrap').prepend('<div>Halo</div>');
+            $('#boxes_wrap').append('<div>Halo</div>');
+            $('#boxes_wrap').before('<div>Halo</div>');
+            $('#boxes_wrap').after('<div>Halo</div>');
+            
+            // ==== Menghapus Element ====
+            //empty remove
+            $('#boxes_wrap').empty();
+            // $('#boxes_wrap').remove();
+
             
         });
     </script>
