--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
     <title>Jquery Basic</title>
     <style>
         #boxes_wrap{ width:100px; height: 100px; background-color: gray; }
+
+        .change{
+            background-color:white !important;
+            color : gray !important;
+        }
     </style>
 </head>
 <body>
-    <h1>Belajar Jquery!</h1>
+    <h1 class="change">Belajar JQuery!</h1>
 
     <div id="box1"> Box 1 </div>
     <div id="boxes_wrap">
@@ -31,17 +36,27 @@
         $(document).ready(function(){
 
             // ======== Selection ========
-            // $('h1').css('color','red');
-            // $('#box1').css('color','blue');
+            // ==== css jquery ====
+            $('h1').css
+            ({
+                'color' : 'white',
+                'backgroundColor' : 'gray',
+                'padding' : '2px',
+            });            
+
+            $('#box1').css('color','blue');
             // $('.boxes').css('color','violet');
             // $('.boxes:first').css('color','yellow');
             // $('.boxes:last').css('color','aqua');
             // $('.boxes:eq(2)').css('color','blue');
 
             // ======== Event ========
-            // $('h1').click(function(){
-            //     $('h1').css('color','blue');
-            // });
+            $('h1').click(function(){
+                // $('h1').removeClass('change');
+                // $('h1').addClass('change');
+                $('h1').toggleClass('change');
+                // $('h1').css('color','blue');
+            });
             // $('h1').mouseenter(function(){
             //     $('h1').css('color','green');
             // });
@@ -80,8 +95,8 @@
             
             // ==== Menghapus Element ====
             //empty remove
-            $('#boxes_wrap').empty();
-            // $('#boxes_wrap').remove();
+            // $('#boxes_wrap').empty();
+            $('#boxes_wrap').remove();
 
             
         });
